# a

./: DESIGN.md  README.md  meson.build
.github/workflows/: main.yml
doc/: DOC.md
doc/design/: closures.md  special_forms.md
exe/: main.cpp  meson.build
include/: a.hpp  meson.build
include/a/: ast.hpp  check.hpp  convert.hpp  emit.hpp  error.hpp  lexer.hpp  parser.hpp  prelude.hpp  token.hpp
include/a/s1-lexing/: lexer.hpp  token.hpp  token_matcher.hpp
include/a/s2-parsing/: ast.hpp  parser.hpp  token2ast.hpp
include/a/s3-verification/: checker.hpp
include/a/s4-conversion/: converter.hpp
include/a/s4-transformation/: transformer.hpp
include/a/s5-codegen/: context.hpp  emitter.hpp
src/: a.cpp  ast.cpp  check.cpp  convert.cpp  emit.cpp  error.cpp  lexer.cpp  meson.build  parser.cpp  token.cpp
src/s1-lexing/: lexer.cpp  token.cpp  token_matcher.cpp
src/s2-parsing/: ast.cpp  parser.cpp  token2ast.cpp
src/s3-verification/: checker.cpp
src/s4-conversion/: converter.cpp
src/s4-transformation/: transformer.cpp
src/s5-codegen/: context.cpp  emitter.cpp
test/: lexer.cpp  main.cpp  meson.build  parser.cpp  prelude.hpp  token.cpp
